--- a/car-details-live-sale.html
+++ b/car-details-live-sale.html
@@ -655,7 +655,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cd-rf-div">
+                                    <div class="cd-rf-div cd-rf-input-cont">
                                         <div class="form-group">
                                             <label
                                                 class="form-label text-white fw-semibold d-flex align-items-center gap-2 justify-content-between"><span>Enter
