--- a/pages.html
+++ b/pages.html
@@ -54,16 +54,20 @@
                 <li><a href="./car-details-wholesale.html" class="text-white">Vehicle details wholesale</a></li>
                 <li><a href="./car-details-smartexchange.html" class="text-white">Vehicle details smartexchange</a></li>
                 <li class="list-unstyled"><a class="text-parrot text-center">------ 23-Nov-2024 ------</a></li>
-                <li><a href="./dashboard-offered.html" class="text-info">Dashboard SmartExchange offered</a></li>
-                <li><a href="./dashboard-received.html" class="text-info">Dashboard SmartExchange received</a></li>
-                <li><a href="./dashboard-listings.html" class="text-info">Dashboard vehicle listings</a></li>
-                <li><a href="./dashboard-closed-purchases.html" class="text-info">Dashboard vehicles closed purchases</a></li>
-                <li><a href="./dashboard-voided-sales.html" class="text-info">Dashboard vehicles voided sales</a></li>
-                <li><a href="./dashboard-quotes.html" class="text-info">Dashboard Smart drop quotes</a></li>
-                <li><a href="./dashboard-accepted.html" class="text-info">Dashboard Smart drop accepted</a></li>
-                <li><a href="./live-sale-notice.html" class="text-info">Live Sale Notice</a></li>
-                <li><a href="./smarthub-fees.html" class="text-info">SmartHub Fees</a></li>
-                <li><a href="./changes-and-voided-sales.html" class="text-info">Changes and voided sales form</a></li>
+                <li><a href="./dashboard-offered.html" class="text-white">Dashboard SmartExchange offered</a></li>
+                <li><a href="./dashboard-received.html" class="text-white">Dashboard SmartExchange received</a></li>
+                <li><a href="./dashboard-listings.html" class="text-white">Dashboard vehicle listings</a></li>
+                <li><a href="./dashboard-closed-purchases.html" class="text-white">Dashboard vehicles closed purchases</a></li>
+                <li><a href="./dashboard-voided-sales.html" class="text-white">Dashboard vehicles voided sales</a></li>
+                <li><a href="./dashboard-quotes.html" class="text-white">Dashboard Smart drop quotes</a></li>
+                <li><a href="./dashboard-accepted.html" class="text-white">Dashboard Smart drop accepted</a></li>
+                <li><a href="./live-sale-notice.html" class="text-white">Live Sale Notice</a></li>
+                <li><a href="./smarthub-fees.html" class="text-white">SmartHub Fees</a></li>
+                <li><a href="./changes-and-voided-sales.html" class="text-white">Changes and voided sales form</a></li>
+                <li class="list-unstyled"><a class="text-parrot text-center">------ 25-Nov-2024 ------</a></li>
+                <li><a href="./sell-my-car-brand.html" class="text-info">Sell My Car Landing Page</a></li>
+                <li><a href="./kyc-verification.html" class="text-info">KYC verification</a></li>
+                <li><a href="./account-reporting.html" class="text-info">Account Reporting</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
