--- a/dashboard-live-bids.html
+++ b/dashboard-live-bids.html
@@ -55,7 +55,7 @@
                     </div>
                     <!-- Right: Chat and Profile Icon with Dropdown -->
                     <div class="d-flex align-items-center nav-right ms-xl-0 ms-auto">
-                        <a href="#" class="nav-link nr-chat-link">
+                        <a href="#" class="nav-link nr-chat-link" onclick="openModal('dashboardNotification')">
                             <svg width="48" height="49" viewBox="0 0 48 49" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle opacity="0.56" cx="24" cy="24.2402" r="23.3" stroke="white"
