--- a/account-reporting.html
+++ b/account-reporting.html
@@ -109,8 +109,9 @@
         <main class="mb-5 pb-4">
             <section class="pt-3">
                 <div class="container">
-                    <a href="./kyc-verification.html" class="text-decoration-none psi-title mb-0 text-white d-flex align-items-center gap-3"><svg width="48" height="49"
-                            viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="./kyc-verification.html"
+                        class="text-decoration-none psi-title mb-0 text-white d-flex align-items-center gap-3"><svg
+                            width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle opacity="0.56" cx="24" cy="24.4824" r="23.3" stroke="white" stroke-width="1.4" />
                             <g clip-path="url(#clip0_4_27017)">
                                 <path d="M17 24.002H31" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -142,18 +143,18 @@
                                         <p class="psi-desc light-text mb-1 fw-light">See how your dealership is
                                             performing - from buying activity, how much money you have saved and spent
                                             to cancellation rates.</p>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
-                                            <div class="mb-1 acc-rep-box">
-                                            </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
+                                        <div class="mb-1 acc-rep-box">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -173,8 +174,7 @@
                                 <img src="./assets/img/Rays-green.svg" alt="Rays">
                                 <span>The smarter way to trade.</span>
                             </h3>
-                            <p class="mb-0 pf-subtitle"><span class="text-parrot">85%</span> of traders earn more with
-                                SmartConnect.</p>
+                            <p class="mb-0 pf-subtitle"><span class="text-parrot">87%</span> of sellers earn more, sell your car tthe smart way!</p>
                         </div>
                         <img src="./assets/img/pre-footer-img.png" alt="Car"
                             class="w-100 img-fluid d-lg-none d-block mt-5">
