--- a/kyc-verification.html
+++ b/kyc-verification.html
@@ -115,7 +115,7 @@
             <section class="py-3">
                 <div class="container py-1">
                     <div class="row">
-                        <div class="col-xl-6">
+                        <div class="col-xl-6 pb-xl-0 pb-4">
                             <div class="site-box">
                                 <div class="accordion kyc-acc" id="accordionKYC">
                                     <!-- Accordion Item 1 -->
@@ -1203,8 +1203,7 @@
                                 <img src="./assets/img/Rays-green.svg" alt="Rays">
                                 <span>The smarter way to trade.</span>
                             </h3>
-                            <p class="mb-0 pf-subtitle"><span class="text-parrot">85%</span> of traders earn more with
-                                SmartConnect.</p>
+                            <p class="mb-0 pf-subtitle"><span class="text-parrot">87%</span> of sellers earn more, sell your car tthe smart way!</p>
                         </div>
                         <img src="./assets/img/pre-footer-img.png" alt="Car"
                             class="w-100 img-fluid d-lg-none d-block mt-5">
