--- a/live-sale.html
+++ b/live-sale.html
@@ -418,7 +418,15 @@
                                                     <span class="plcb-blue"></span>
                                                     <span class="plc-plate-number">KY58CSM</span>
                                                 </div>
-                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
+                                                <div class="plcb-location">
+                                                    <svg width="10" height="14" viewBox="0 0 10 14" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M8.4837 7.51242C8.10814 8.26353 7.5737 9.08687 6.88036 9.98242C6.33148 10.7046 5.73925 11.398 5.1037 12.0624C4.46814 11.398 3.87592 10.7046 3.32703 9.98242C2.6337 9.08687 2.09925 8.26353 1.7237 7.51242C1.26148 6.58798 1.03036 5.77187 1.03036 5.06409C1.03036 4.35631 1.21092 3.69187 1.57203 3.07076C1.93314 2.44964 2.43148 1.95853 3.06703 1.59742C3.70259 1.23631 4.38148 1.05576 5.1037 1.05576C5.82592 1.05576 6.50481 1.23631 7.14036 1.59742C7.77592 1.95853 8.27425 2.44964 8.63536 3.07076C8.99648 3.69187 9.17703 4.35631 9.17703 5.06409C9.17703 5.77187 8.94592 6.58798 8.4837 7.51242ZM5.1037 13.2324C5.3637 12.9724 5.6237 12.7124 5.8837 12.4524C6.49036 11.8169 7.03925 11.1669 7.53036 10.5024C8.25259 9.54909 8.81592 8.66798 9.22036 7.85909C9.74036 6.81909 10.0004 5.89464 10.0004 5.08576C10.0004 4.21909 9.77648 3.4102 9.3287 2.65909C8.88092 1.90798 8.2887 1.31575 7.55203 0.882422C6.81536 0.449089 5.99925 0.232422 5.1037 0.232422C4.20814 0.232422 3.39203 0.449089 2.65536 0.882422C1.9187 1.31575 1.32648 1.90798 0.878698 2.65909C0.43092 3.4102 0.207031 4.21909 0.207031 5.08576C0.207031 5.89464 0.467031 6.81909 0.987031 7.85909C1.39148 8.66798 1.95481 9.54909 2.67703 10.5024C3.16814 11.1669 3.71703 11.8169 4.3237 12.4524L5.1037 13.2324ZM5.1037 6.73242C4.64148 6.73242 4.2587 6.57353 3.95536 6.25576C3.65203 5.93798 3.50036 5.5552 3.50036 5.10742C3.50036 4.65964 3.65203 4.27687 3.95536 3.95909C4.2587 3.64131 4.64148 3.48242 5.1037 3.48242C5.56592 3.48242 5.95592 3.64131 6.2737 3.95909C6.59148 4.27687 6.75036 4.65964 6.75036 5.10742C6.75036 5.5552 6.59148 5.93798 6.2737 6.25576C5.95592 6.57353 5.56592 6.73242 5.1037 6.73242ZM5.1037 7.55576C5.76814 7.55576 6.3387 7.31742 6.81536 6.84076C7.29203 6.36409 7.53036 5.78631 7.53036 5.10742C7.53036 4.42853 7.29203 3.85076 6.81536 3.37409C6.3387 2.89742 5.76814 2.65909 5.1037 2.65909C4.43925 2.65909 3.8687 2.89742 3.39203 3.37409C2.91536 3.85076 2.67703 4.42853 2.67703 5.10742C2.67703 5.78631 2.91536 6.36409 3.39203 6.84076C3.8687 7.31742 4.43925 7.55576 5.1037 7.55576Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                    <span>Panama City</span>
+                                                </div>
                                             </div>
                                             <h5 class="mb-0 plcb-name">Mercedes-Benz C-Class-2023</h5>
                                             <div class="plcb-details">
@@ -432,6 +440,7 @@
                                                     <span class="plc-price-title">Reserve price</span>
                                                     <span class="plc-price-amount">£ 7,656.00</span>
                                                 </div>
+                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
                                             </div>
                                         </div>
                                     </a>
@@ -503,7 +512,15 @@
                                                     <span class="plcb-blue"></span>
                                                     <span class="plc-plate-number">KY58CSM</span>
                                                 </div>
-                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
+                                                <div class="plcb-location">
+                                                    <svg width="10" height="14" viewBox="0 0 10 14" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M8.4837 7.51242C8.10814 8.26353 7.5737 9.08687 6.88036 9.98242C6.33148 10.7046 5.73925 11.398 5.1037 12.0624C4.46814 11.398 3.87592 10.7046 3.32703 9.98242C2.6337 9.08687 2.09925 8.26353 1.7237 7.51242C1.26148 6.58798 1.03036 5.77187 1.03036 5.06409C1.03036 4.35631 1.21092 3.69187 1.57203 3.07076C1.93314 2.44964 2.43148 1.95853 3.06703 1.59742C3.70259 1.23631 4.38148 1.05576 5.1037 1.05576C5.82592 1.05576 6.50481 1.23631 7.14036 1.59742C7.77592 1.95853 8.27425 2.44964 8.63536 3.07076C8.99648 3.69187 9.17703 4.35631 9.17703 5.06409C9.17703 5.77187 8.94592 6.58798 8.4837 7.51242ZM5.1037 13.2324C5.3637 12.9724 5.6237 12.7124 5.8837 12.4524C6.49036 11.8169 7.03925 11.1669 7.53036 10.5024C8.25259 9.54909 8.81592 8.66798 9.22036 7.85909C9.74036 6.81909 10.0004 5.89464 10.0004 5.08576C10.0004 4.21909 9.77648 3.4102 9.3287 2.65909C8.88092 1.90798 8.2887 1.31575 7.55203 0.882422C6.81536 0.449089 5.99925 0.232422 5.1037 0.232422C4.20814 0.232422 3.39203 0.449089 2.65536 0.882422C1.9187 1.31575 1.32648 1.90798 0.878698 2.65909C0.43092 3.4102 0.207031 4.21909 0.207031 5.08576C0.207031 5.89464 0.467031 6.81909 0.987031 7.85909C1.39148 8.66798 1.95481 9.54909 2.67703 10.5024C3.16814 11.1669 3.71703 11.8169 4.3237 12.4524L5.1037 13.2324ZM5.1037 6.73242C4.64148 6.73242 4.2587 6.57353 3.95536 6.25576C3.65203 5.93798 3.50036 5.5552 3.50036 5.10742C3.50036 4.65964 3.65203 4.27687 3.95536 3.95909C4.2587 3.64131 4.64148 3.48242 5.1037 3.48242C5.56592 3.48242 5.95592 3.64131 6.2737 3.95909C6.59148 4.27687 6.75036 4.65964 6.75036 5.10742C6.75036 5.5552 6.59148 5.93798 6.2737 6.25576C5.95592 6.57353 5.56592 6.73242 5.1037 6.73242ZM5.1037 7.55576C5.76814 7.55576 6.3387 7.31742 6.81536 6.84076C7.29203 6.36409 7.53036 5.78631 7.53036 5.10742C7.53036 4.42853 7.29203 3.85076 6.81536 3.37409C6.3387 2.89742 5.76814 2.65909 5.1037 2.65909C4.43925 2.65909 3.8687 2.89742 3.39203 3.37409C2.91536 3.85076 2.67703 4.42853 2.67703 5.10742C2.67703 5.78631 2.91536 6.36409 3.39203 6.84076C3.8687 7.31742 4.43925 7.55576 5.1037 7.55576Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                    <span>Panama City</span>
+                                                </div>
                                             </div>
                                             <h5 class="mb-0 plcb-name">Mercedes-Benz C-Class-2023</h5>
                                             <div class="plcb-details">
@@ -517,6 +534,7 @@
                                                     <span class="plc-price-title">Reserve price</span>
                                                     <span class="plc-price-amount">£ 7,656.00</span>
                                                 </div>
+                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
                                             </div>
                                         </div>
                                     </a>
@@ -588,7 +606,15 @@
                                                     <span class="plcb-blue"></span>
                                                     <span class="plc-plate-number">KY58CSM</span>
                                                 </div>
-                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
+                                                <div class="plcb-location">
+                                                    <svg width="10" height="14" viewBox="0 0 10 14" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M8.4837 7.51242C8.10814 8.26353 7.5737 9.08687 6.88036 9.98242C6.33148 10.7046 5.73925 11.398 5.1037 12.0624C4.46814 11.398 3.87592 10.7046 3.32703 9.98242C2.6337 9.08687 2.09925 8.26353 1.7237 7.51242C1.26148 6.58798 1.03036 5.77187 1.03036 5.06409C1.03036 4.35631 1.21092 3.69187 1.57203 3.07076C1.93314 2.44964 2.43148 1.95853 3.06703 1.59742C3.70259 1.23631 4.38148 1.05576 5.1037 1.05576C5.82592 1.05576 6.50481 1.23631 7.14036 1.59742C7.77592 1.95853 8.27425 2.44964 8.63536 3.07076C8.99648 3.69187 9.17703 4.35631 9.17703 5.06409C9.17703 5.77187 8.94592 6.58798 8.4837 7.51242ZM5.1037 13.2324C5.3637 12.9724 5.6237 12.7124 5.8837 12.4524C6.49036 11.8169 7.03925 11.1669 7.53036 10.5024C8.25259 9.54909 8.81592 8.66798 9.22036 7.85909C9.74036 6.81909 10.0004 5.89464 10.0004 5.08576C10.0004 4.21909 9.77648 3.4102 9.3287 2.65909C8.88092 1.90798 8.2887 1.31575 7.55203 0.882422C6.81536 0.449089 5.99925 0.232422 5.1037 0.232422C4.20814 0.232422 3.39203 0.449089 2.65536 0.882422C1.9187 1.31575 1.32648 1.90798 0.878698 2.65909C0.43092 3.4102 0.207031 4.21909 0.207031 5.08576C0.207031 5.89464 0.467031 6.81909 0.987031 7.85909C1.39148 8.66798 1.95481 9.54909 2.67703 10.5024C3.16814 11.1669 3.71703 11.8169 4.3237 12.4524L5.1037 13.2324ZM5.1037 6.73242C4.64148 6.73242 4.2587 6.57353 3.95536 6.25576C3.65203 5.93798 3.50036 5.5552 3.50036 5.10742C3.50036 4.65964 3.65203 4.27687 3.95536 3.95909C4.2587 3.64131 4.64148 3.48242 5.1037 3.48242C5.56592 3.48242 5.95592 3.64131 6.2737 3.95909C6.59148 4.27687 6.75036 4.65964 6.75036 5.10742C6.75036 5.5552 6.59148 5.93798 6.2737 6.25576C5.95592 6.57353 5.56592 6.73242 5.1037 6.73242ZM5.1037 7.55576C5.76814 7.55576 6.3387 7.31742 6.81536 6.84076C7.29203 6.36409 7.53036 5.78631 7.53036 5.10742C7.53036 4.42853 7.29203 3.85076 6.81536 3.37409C6.3387 2.89742 5.76814 2.65909 5.1037 2.65909C4.43925 2.65909 3.8687 2.89742 3.39203 3.37409C2.91536 3.85076 2.67703 4.42853 2.67703 5.10742C2.67703 5.78631 2.91536 6.36409 3.39203 6.84076C3.8687 7.31742 4.43925 7.55576 5.1037 7.55576Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                    <span>Panama City</span>
+                                                </div>
                                             </div>
                                             <h5 class="mb-0 plcb-name">Mercedes-Benz C-Class-2023</h5>
                                             <div class="plcb-details">
@@ -602,6 +628,7 @@
                                                     <span class="plc-price-title">Reserve price</span>
                                                     <span class="plc-price-amount">£ 7,656.00</span>
                                                 </div>
+                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
                                             </div>
                                         </div>
                                     </a>
@@ -673,7 +700,15 @@
                                                     <span class="plcb-blue"></span>
                                                     <span class="plc-plate-number">KY58CSM</span>
                                                 </div>
-                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
+                                                <div class="plcb-location">
+                                                    <svg width="10" height="14" viewBox="0 0 10 14" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M8.4837 7.51242C8.10814 8.26353 7.5737 9.08687 6.88036 9.98242C6.33148 10.7046 5.73925 11.398 5.1037 12.0624C4.46814 11.398 3.87592 10.7046 3.32703 9.98242C2.6337 9.08687 2.09925 8.26353 1.7237 7.51242C1.26148 6.58798 1.03036 5.77187 1.03036 5.06409C1.03036 4.35631 1.21092 3.69187 1.57203 3.07076C1.93314 2.44964 2.43148 1.95853 3.06703 1.59742C3.70259 1.23631 4.38148 1.05576 5.1037 1.05576C5.82592 1.05576 6.50481 1.23631 7.14036 1.59742C7.77592 1.95853 8.27425 2.44964 8.63536 3.07076C8.99648 3.69187 9.17703 4.35631 9.17703 5.06409C9.17703 5.77187 8.94592 6.58798 8.4837 7.51242ZM5.1037 13.2324C5.3637 12.9724 5.6237 12.7124 5.8837 12.4524C6.49036 11.8169 7.03925 11.1669 7.53036 10.5024C8.25259 9.54909 8.81592 8.66798 9.22036 7.85909C9.74036 6.81909 10.0004 5.89464 10.0004 5.08576C10.0004 4.21909 9.77648 3.4102 9.3287 2.65909C8.88092 1.90798 8.2887 1.31575 7.55203 0.882422C6.81536 0.449089 5.99925 0.232422 5.1037 0.232422C4.20814 0.232422 3.39203 0.449089 2.65536 0.882422C1.9187 1.31575 1.32648 1.90798 0.878698 2.65909C0.43092 3.4102 0.207031 4.21909 0.207031 5.08576C0.207031 5.89464 0.467031 6.81909 0.987031 7.85909C1.39148 8.66798 1.95481 9.54909 2.67703 10.5024C3.16814 11.1669 3.71703 11.8169 4.3237 12.4524L5.1037 13.2324ZM5.1037 6.73242C4.64148 6.73242 4.2587 6.57353 3.95536 6.25576C3.65203 5.93798 3.50036 5.5552 3.50036 5.10742C3.50036 4.65964 3.65203 4.27687 3.95536 3.95909C4.2587 3.64131 4.64148 3.48242 5.1037 3.48242C5.56592 3.48242 5.95592 3.64131 6.2737 3.95909C6.59148 4.27687 6.75036 4.65964 6.75036 5.10742C6.75036 5.5552 6.59148 5.93798 6.2737 6.25576C5.95592 6.57353 5.56592 6.73242 5.1037 6.73242ZM5.1037 7.55576C5.76814 7.55576 6.3387 7.31742 6.81536 6.84076C7.29203 6.36409 7.53036 5.78631 7.53036 5.10742C7.53036 4.42853 7.29203 3.85076 6.81536 3.37409C6.3387 2.89742 5.76814 2.65909 5.1037 2.65909C4.43925 2.65909 3.8687 2.89742 3.39203 3.37409C2.91536 3.85076 2.67703 4.42853 2.67703 5.10742C2.67703 5.78631 2.91536 6.36409 3.39203 6.84076C3.8687 7.31742 4.43925 7.55576 5.1037 7.55576Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                    <span>Panama City</span>
+                                                </div>
                                             </div>
                                             <h5 class="mb-0 plcb-name">Mercedes-Benz C-Class-2023</h5>
                                             <div class="plcb-details">
@@ -687,6 +722,7 @@
                                                     <span class="plc-price-title">Reserve price</span>
                                                     <span class="plc-price-amount">£ 7,656.00</span>
                                                 </div>
+                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
                                             </div>
                                         </div>
                                     </a>
@@ -758,7 +794,15 @@
                                                     <span class="plcb-blue"></span>
                                                     <span class="plc-plate-number">KY58CSM</span>
                                                 </div>
-                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
+                                                <div class="plcb-location">
+                                                    <svg width="10" height="14" viewBox="0 0 10 14" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M8.4837 7.51242C8.10814 8.26353 7.5737 9.08687 6.88036 9.98242C6.33148 10.7046 5.73925 11.398 5.1037 12.0624C4.46814 11.398 3.87592 10.7046 3.32703 9.98242C2.6337 9.08687 2.09925 8.26353 1.7237 7.51242C1.26148 6.58798 1.03036 5.77187 1.03036 5.06409C1.03036 4.35631 1.21092 3.69187 1.57203 3.07076C1.93314 2.44964 2.43148 1.95853 3.06703 1.59742C3.70259 1.23631 4.38148 1.05576 5.1037 1.05576C5.82592 1.05576 6.50481 1.23631 7.14036 1.59742C7.77592 1.95853 8.27425 2.44964 8.63536 3.07076C8.99648 3.69187 9.17703 4.35631 9.17703 5.06409C9.17703 5.77187 8.94592 6.58798 8.4837 7.51242ZM5.1037 13.2324C5.3637 12.9724 5.6237 12.7124 5.8837 12.4524C6.49036 11.8169 7.03925 11.1669 7.53036 10.5024C8.25259 9.54909 8.81592 8.66798 9.22036 7.85909C9.74036 6.81909 10.0004 5.89464 10.0004 5.08576C10.0004 4.21909 9.77648 3.4102 9.3287 2.65909C8.88092 1.90798 8.2887 1.31575 7.55203 0.882422C6.81536 0.449089 5.99925 0.232422 5.1037 0.232422C4.20814 0.232422 3.39203 0.449089 2.65536 0.882422C1.9187 1.31575 1.32648 1.90798 0.878698 2.65909C0.43092 3.4102 0.207031 4.21909 0.207031 5.08576C0.207031 5.89464 0.467031 6.81909 0.987031 7.85909C1.39148 8.66798 1.95481 9.54909 2.67703 10.5024C3.16814 11.1669 3.71703 11.8169 4.3237 12.4524L5.1037 13.2324ZM5.1037 6.73242C4.64148 6.73242 4.2587 6.57353 3.95536 6.25576C3.65203 5.93798 3.50036 5.5552 3.50036 5.10742C3.50036 4.65964 3.65203 4.27687 3.95536 3.95909C4.2587 3.64131 4.64148 3.48242 5.1037 3.48242C5.56592 3.48242 5.95592 3.64131 6.2737 3.95909C6.59148 4.27687 6.75036 4.65964 6.75036 5.10742C6.75036 5.5552 6.59148 5.93798 6.2737 6.25576C5.95592 6.57353 5.56592 6.73242 5.1037 6.73242ZM5.1037 7.55576C5.76814 7.55576 6.3387 7.31742 6.81536 6.84076C7.29203 6.36409 7.53036 5.78631 7.53036 5.10742C7.53036 4.42853 7.29203 3.85076 6.81536 3.37409C6.3387 2.89742 5.76814 2.65909 5.1037 2.65909C4.43925 2.65909 3.8687 2.89742 3.39203 3.37409C2.91536 3.85076 2.67703 4.42853 2.67703 5.10742C2.67703 5.78631 2.91536 6.36409 3.39203 6.84076C3.8687 7.31742 4.43925 7.55576 5.1037 7.55576Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                    <span>Panama City</span>
+                                                </div>
                                             </div>
                                             <h5 class="mb-0 plcb-name">Mercedes-Benz C-Class-2023</h5>
                                             <div class="plcb-details">
@@ -772,6 +816,7 @@
                                                     <span class="plc-price-title">Reserve price</span>
                                                     <span class="plc-price-amount">£ 7,656.00</span>
                                                 </div>
+                                                <img src="./assets/img/make-logo.png" alt="Make" class="make-logo">
                                             </div>
                                         </div>
                                     </a>
