--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=10">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=11">
     </head>
 
     <body class="homepage">
@@ -111,8 +111,10 @@
                 <div class="container py-lg-4">
                     <div class="row flex-lg-row flex-column-reverse gap-lg-0 gap-4">
                         <div class="col-lg-6 text-center d-flex flex-column justify-content-end align-items-center">
-                            <img src="./assets/img/home-sec-1.png" alt="Image" class="img-fluid hs-1-img"
-                                data-aos="fade-up">
+                            <div class="hs-4-mobile hs-3-mobile" data-aos="fade-up" data-aos-duration="800">
+                                <iframe src="./sell-my-car-brand.html" frameborder="0" class="hs-4-iframe"></iframe>
+                                <img src="./assets/img/iPhone-14-Pro-half-frame.png" alt="Mobile" class="hs-4-frame">
+                            </div>
                         </div>
                         <div class="col-lg-6 ps-xl-5">
                             <div class="home-sec-content">
@@ -228,8 +230,8 @@
                         <div class="col-lg-6 text-center d-flex flex-column justify-content-center">
                             <div class="home-sec-4-imgs position-relative">
                                 <div class="hs-4-mobile" data-aos="fade-up" data-aos-duration="800">
-                                    <!-- <iframe src="./live-sale.html" frameborder="0" class="hs-4-iframe"></iframe> -->
-                                    <img src="./assets/img/carsmart-homepage.png" alt="Mobile" class="hs-4-frame">
+                                    <iframe src="./live-sale.html" frameborder="0" class="hs-4-iframe"></iframe>
+                                    <img src="./assets/img/iPhone-14-Pro-frame.png" alt="Mobile" class="hs-4-frame">
                                 </div>
                                 <div class="hh-tooltip hht-6">
                                     <img src="./assets/img/hh-tooltip-6.svg" alt="Tooltips" class="w-100">
@@ -773,7 +775,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=10"></script>
+        <script src="./assets/js/custom.js?v=11"></script>
     </body>
 
 </html>
