--- a/sell-my-car-brand.html
+++ b/sell-my-car-brand.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=10">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=11">
     </head>
 
     <body class="light-page customer-page">
@@ -26,22 +26,32 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
+                                <a class="nav-link" href="#">Sell your car</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">How we do it</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Our standards</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
+                                    data-bs-toggle="dropdown" aria-expanded="false"> Explore </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">SmartDrop</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartConnect</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartMatch</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartWallet</a></li>
+                                    <li><a class="dropdown-item" href="#">Finance</a></li>
+                                    <li><a class="dropdown-item" href="#">Latest News</a></li>
+                                    <li><a class="dropdown-item" href="#">Discover your ideal car</a></li>
+                                    <li><a class="dropdown-item" href="#">Smart Scan</a></li>
+                                    <li><a class="dropdown-item" href="#">Guides</a></li>
+                                    <li><a class="dropdown-item" href="#">Smart Hub</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
                                 <div class="d-lg-none d-flex align-items-center nav-right ms-xl-0 ms-auto">
-                                    <a href="./signup.html" class="btn btn-outline-main">Sign up</a>
-                                    <a href="./signin-1.html" class="btn btn-main">Sign in</a>
+                                    <a href="./signin-1.html" class="btn btn-outline-blue">
+                                        <img src="./assets/img/signin-icon.png" alt="Icon" height="19">
+                                        <span>Sign in</span>
+                                    </a>
                                 </div>
                             </li>
                         </ul>
@@ -64,7 +74,7 @@
             <div class="container flex-grow-1 d-flex flex-column justify-content-center">
                 <div class="d-flex smc-hero-content flex-column gap-4 mb-md-0 mb-sm-5 py-5">
                     <div class="ps-4 ms-3">
-                        <img src="./assets/img/bmw-icon.png" alt="BMW" height="84">
+                        <img src="./assets/img/bmw-icon.png" alt="BMW" height="84" class="sma-brand-icon">
                     </div>
                     <div class="d-flex gap-2 smc-title">
                         <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
@@ -1137,7 +1147,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=10"></script>
+        <script src="./assets/js/custom.js?v=11"></script>
     </body>
 
 </html>
